Corrigido o Título da Página.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>index</title>
+<title>Curso de Arduino</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- ImageReady Preload Script (index.psd) -->
 <script type="text/javascript">
@@ -122,7 +122,7 @@ function preloadImages() {
 	</tr>
 	<tr>
 		<td colspan="6" rowspan="2" valign="top" align="justify">
-	  <p>Seja Bem vindo ao Curso de Arduino, nosso curso está disponível em todos o esado de Minas Gerais, em turmas fechadas ou abertas, sempre por encomenda ou patrocinadas por alguma instituição de ensino ou grupo de estudos.</p>
+	  <p>Seja Bem vindo ao Curso de Arduino, nosso curso está disponível em todos o estado de Minas Gerais, em turmas fechadas ou abertas, sempre por encomenda ou patrocinadas por alguma instituição de ensino ou grupo de estudos.</p>
 	  <p class="a"><a href="contatos.html" class="a">Entre em contato clicando neste link.</a></p></td>
 	  <td rowspan="2"><img src="images/spacer.gif" width="30" height="95" alt=""></td>
 		<td>
