Correções na página index.html, novas paginas de detalhes adicionadas e corrigidas.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ function preloadImages() {
 	</tr>
 	<tr>
 		<td colspan="5">
-			<a href="avançados.html"
+			<a href="avancado.html"
 				onmouseover="window.status='Cursos Avançados';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="images/cursosavancados.jpg" width="243" height="33" border="0" alt="Cursos Avan&#231;ados"></a></td>
