--- a/introdutorio.html
+++ b/introdutorio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>especificas</title>
+<title>Curso Introdutório ao Arduino</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -9,15 +9,17 @@
 <center>
 <table id="Table_01" width="776" border="0" cellpadding="0" cellspacing="0">
 	<tr>
-		<td width="339" height="369" rowspan="6">
-			<img src="images/spacer.gif" width="339" height="369" alt="" /></td>
-		<td colspan="9">
-			<img id="m2" src="images/m2.jpg" width="436" height="53" alt="" /></td>
+		<td colspan="3" rowspan="6">
+			<img id="m1_detalhes" src="images/m1_detalhes.jpg" width="299" height="285" alt="" /></td>
+		<td colspan="10">
+			<img id="m2" src="images/m2.jpg" width="476" height="53" alt="" /></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="53" alt="" /></td>
 	</tr>
 	<tr>
-		<td colspan="3">
+		<td>
+			<img id="space" src="images/space.jpg" width="40" height="32" alt="" /></td>
+		<td colspan="2">
 			<a href="index.html"
 				onmouseover="window.status='Início';  return true;"
 				onmouseout="window.status='';  return true;">
@@ -42,8 +44,8 @@
 				onmouseover="window.status='Material';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img id="material" src="images/material.jpg" width="65" height="32" border="0" alt="Material" /></a></td>
-		<td>
-			<a href="index.html"
+		<td colspan="2">
+			<a href="contato.html"
 				onmouseover="window.status='Contato';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img id="contato" src="images/contato.jpg" width="88" height="32" border="0" alt="Contato" /></a></td>
@@ -52,20 +54,20 @@
 	</tr>
 	<tr>
 		<td colspan="3" rowspan="3">
-			<img id="m3" src="images/m3.jpg" width="51" height="166" alt="" /></td>
+			<img id="m3" src="images/m3.jpg" width="91" height="166" alt="" /></td>
 		<td colspan="4">
 			<a href="introdutorio.html"
 				onmouseover="window.status='Curso Introdutório';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img id="cursointrodutorio" src="images/cursointrodutorio.jpg" width="243" height="34" border="0" alt="Curso Introdut&#243;rio" /></a></td>
-		<td colspan="2" rowspan="3">
-			<img id="m3011" src="images/m3-11.jpg" width="142" height="166" alt="" /></td>
+		<td colspan="3" rowspan="3">
+			<img id="m3013" src="images/m3-13.jpg" width="142" height="166" alt="" /></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="34" alt="" /></td>
 	</tr>
 	<tr>
 		<td colspan="4">
-			<a href="avançados.html"
+			<a href="avancado.html"
 				onmouseover="window.status='Cursos Avançados';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img id="cursosavancados" src="images/cursosavancados.jpg" width="243" height="33" border="0" alt="Cursos Avan&#231;ados" /></a></td>
@@ -74,51 +76,77 @@
 	</tr>
 	<tr>
 		<td colspan="4">
-			<img id="m3013" src="images/m3-13.jpg" width="243" height="99" alt="" /></td>
+			<img id="m3015" src="images/m3-15.jpg" width="243" height="99" alt="" /></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="99" alt="" /></td>
 	</tr>
 	<tr>
-		<td width="436" height="118" colspan="9">
-			<img src="images/spacer.gif" width="436" height="118" alt="" /></td>
+		<td colspan="10" rowspan="2">
+			<a href="introdutorio.html"
+				onmouseover="window.status='Introdutorio';  return true;"
+				onmouseout="window.status='';  return true;">
+				<img id="introdutorio" src="images/introdutorio.jpg" width="476" height="45" border="0" alt="Introdutorio" /></a></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="118" alt="" /></td>
+			<img src="images/spacer.gif" width="1" height="34" alt="" /></td>
 	</tr>
 	<tr>
-		<td colspan="2" rowspan="2">
-			<img id="introdutorio_15" src="images/introdutorio_15.jpg" width="340" height="235" alt="" /></td>
-		<td width="435" height="234" colspan="8">
-			<img src="images/spacer.gif" width="435" height="234" alt="" /></td>
+		<td colspan="3" rowspan="2">
+			<a href="parceiros.html"
+				onmouseover="window.status='Parceiros';  return true;"
+				onmouseout="window.status='';  return true;">
+				<img id="parceiros_detalhes" src="images/parceiros_detalhes.jpg" width="299" height="32" border="0" alt="Parceiros" /></a></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="234" alt="" /></td>
+			<img src="images/spacer.gif" width="1" height="11" alt="" /></td>
 	</tr>
 	<tr>
-		<td colspan="8" rowspan="2">
-			<img id="down" src="images/down.jpg" width="435" height="7" alt="" /></td>
+		<td colspan="9" rowspan="3">
+			<img id="introdutorio_17" src="images/introdutorio_17.gif" width="447" height="307" alt="" /></td>
+		<td rowspan="3">
+			<img id="detalhes_03" src="images/detalhes_03.gif" width="29" height="307" alt="" /></td>
+		<td>
+			<img src="images/spacer.gif" width="1" height="21" alt="" /></td>
+	</tr>
+	<tr>
+		<td rowspan="2">
+			<img id="detalhes_01" src="images/detalhes_01.jpg" width="25" height="286" alt="" /></td>
+		<td rowspan="2">
+			<img id="introdutorio_20" src="images/introdutorio_20.gif" width="235" height="286" alt="" /></td>
+		<td>
+			<img id="parceiros022" src="images/parceiros-22.jpg" width="39" height="1" alt="" /></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="1" alt="" /></td>
 	</tr>
 	<tr>
-		<td colspan="2">
-			<img id="down016" src="images/down-16.jpg" width="340" height="6" alt="" /></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="6" alt="" /></td>
+			<img id="detalhes_02" src="images/detalhes_02.gif" width="39" height="285" alt="" /></td>
+		<td>
+			<img src="images/spacer.gif" width="1" height="285" alt="" /></td>
 	</tr>
 	<tr>
-		<td colspan="3">
-			<img id="introdutorio_19" src="images/introdutorio_19.jpg" width="388" height="70" alt="" /></td>
-		<td colspan="7">
-			<img id="introdutorio_20" src="images/introdutorio_20.jpg" width="387" height="70" alt="" /></td>
+		<td colspan="13">
+			<img id="down" src="images/down.jpg" width="775" height="7" alt="" /></td>
+		<td>
+			<img src="images/spacer.gif" width="1" height="7" alt="" /></td>
+	</tr>
+	<tr>
+		<td colspan="5">
+			<img id="introdutorio_24" src="images/introdutorio_24.jpg" width="388" height="70" alt="" /></td>
+		<td colspan="8">
+			<img id="introdutorio_25" src="images/introdutorio_25.jpg" width="387" height="70" alt="" /></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="70" alt="" /></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/spacer.gif" width="339" height="1" alt="" /></td>
+			<img src="images/spacer.gif" width="25" height="1" alt="" /></td>
 		<td>
-			<img src="images/spacer.gif" width="1" height="1" alt="" /></td>
+			<img src="images/spacer.gif" width="235" height="1" alt="" /></td>
 		<td>
-			<img src="images/spacer.gif" width="48" height="1" alt="" /></td>
+			<img src="images/spacer.gif" width="39" height="1" alt="" /></td>
+		<td>
+			<img src="images/spacer.gif" width="40" height="1" alt="" /></td>
+		<td>
+			<img src="images/spacer.gif" width="49" height="1" alt="" /></td>
 		<td>
 			<img src="images/spacer.gif" width="2" height="1" alt="" /></td>
 		<td>
@@ -132,7 +160,9 @@
 		<td>
 			<img src="images/spacer.gif" width="54" height="1" alt="" /></td>
 		<td>
-			<img src="images/spacer.gif" width="88" height="1" alt="" /></td>
+			<img src="images/spacer.gif" width="59" height="1" alt="" /></td>
+		<td>
+			<img src="images/spacer.gif" width="29" height="1" alt="" /></td>
 		<td></td>
 	</tr>
 </table>
