página contato atualizada com os telefones, email e skype

--- a/contato.html
+++ b/contato.html
@@ -99,18 +99,26 @@
 			<img src="images/spacer.gif" width="1" height="11" alt="" /></td>
 	</tr>
 	<tr>
-		<td colspan="9" rowspan="3">
-			<img id="contato_17" src="images/contato_17.gif" width="447" height="307" alt="" /></td>
+		<td colspan="9" rowspan="3"><p class="text4">Para Contatar os organizadores do Curo de Arduino, entre em contato pelos telefones:</p>
+          <ul>
+            <li class="text4">OI:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(31) 8731-9450</li>
+            <li class="text4">Claro:&nbsp;(31) 8406-9811</li>
+            <li class="text4">Vivo:&nbsp;&nbsp;(31) 9838-7171</li>
+            <li class="text4">Tim:&nbsp;&nbsp;&nbsp;(31) 9252-1434</li>
+          </ul>
+      <p class="text4">Fixo em Sete Lagoas: (31) 3773-2753</p>
+      <p class="text4">Fixo em Belo Horizonte (31) 3434-1109</p>
+      <p class="text4">Por E-mail: consultoria@carlosdelfino.eti.br</p>
+      <p class="text4">Skype: fullservice.admin / consultoria@carlosdelfino.eti.br</p></td>
 		<td rowspan="3">
-			<img id="detalhes_03" src="images/detalhes_03.gif" width="29" height="307" alt="" /></td>
+		  <img id="detalhes_03" src="images/detalhes_03.gif" width="29" height="307" alt="" /></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="21" alt="" /></td>
 	</tr>
 	<tr>
 		<td rowspan="2">
 			<img id="detalhes_01" src="images/detalhes_01.jpg" width="25" height="286" alt="" /></td>
-		<td rowspan="2">
-			<img id="contato_20" src="images/contato_20.gif" width="235" height="286" alt="" /></td>
+		<td rowspan="2">&nbsp;</td>
 		<td>
 			<img id="parceiros022" src="images/parceiros-22.jpg" width="39" height="1" alt="" /></td>
 		<td>
