correções e links e outros detalhes.

--- a/avancado.html
+++ b/avancado.html
@@ -99,8 +99,7 @@
 			<img src="images/spacer.gif" width="1" height="11" alt="" /></td>
 	</tr>
 	<tr>
-		<td colspan="9" rowspan="3">
-			<img id="avancado_17" src="images/avancado_17.gif" width="447" height="307" alt="" /></td>
+		<td colspan="9" rowspan="3">&nbsp;</td>
 		<td rowspan="3">
 			<img id="detalhes_03" src="images/detalhes_03.gif" width="29" height="307" alt="" /></td>
 		<td>
@@ -109,8 +108,7 @@
 	<tr>
 		<td rowspan="2">
 			<img id="detalhes_01" src="images/detalhes_01.jpg" width="25" height="286" alt="" /></td>
-		<td rowspan="2">
-			<img id="avancado_20" src="images/avancado_20.gif" width="235" height="286" alt="" /></td>
+		<td rowspan="2">&nbsp;</td>
 		<td>
 			<img id="parceiros022" src="images/parceiros-22.jpg" width="39" height="1" alt="" /></td>
 		<td>
