--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ function preloadImages() {
 	<tr>
 		<td colspan="6" rowspan="2" valign="top" align="justify">
 	  <p>Seja Bem vindo ao Curso de Arduino, nosso curso está disponível em todos o estado de Minas Gerais, em turmas fechadas ou abertas, sempre por encomenda ou patrocinadas por alguma instituição de ensino ou grupo de estudos.</p>
-	  <p class="a"><a href="contatos.html" class="a">Entre em contato clicando neste link.</a></p></td>
+	  <p class="a"><a href="contato.html" class="a">Entre em contato clicando neste link.</a></p>
+	  <p class="a"><a href="http://arduinominas.com.br/2013-04-10-Divulgacao-do-Curso-Arduino-Primeiro-Semestre-2013.html" class="a">Para Inscrição Clique Aqui.</a></p></td>
 	  <td rowspan="2"><img src="images/spacer.gif" width="30" height="95" alt=""></td>
 		<td>
 			<img src="images/spacer.gif" width="1" height="104" alt=""></td>
